pod-security/baseline/disallow-host-ports-range/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-ports-range
status:
  conditionStatus:
    conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
